getting title and deceription

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 # --- General options --- #
-
+---
+title: Contact me
+subtitle: Here you'll find all the ways to get in touch with me
+---
 # Name of website
 title: Tally Wiesenberg
 
