--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 # --- General options --- #
-
+---
+layout: page
+title: Tally Wiesenberg
+subtitle: At The Intersection of Social Studies and Data Science
+---
 # Name of website
 title: Tally Wiesenberg
 
