--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ avatar: "/img/DSC08052.JPG"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "#EC8C32"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
+navbar-children-col: "##EC8C32"
+page-col: "##EC8C32"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "##EC8C32"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
