--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,11 @@ avatar: "/img/DSC08052.JPG"
 
 navbar-col: "#EC8C32"
 navbar-text-col: "#404040"
-navbar-children-col: "##EC8C32"
-page-col: "##EC8C32"
+navbar-children-col: "#EC8C32"
+page-col: "#EC8C32"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "##EC8C32"
+footer-col: "#EC8C32"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
