--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ avatar: "/img/patapsco 19 (3).jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EC8C32"
+navbar-col: "#81b6e3"
 navbar-text-col: "#404040"
-navbar-children-col: "#EC8C32"
-page-col: "#EC8C32"
+navbar-children-col: "#81b6e3"
+page-col: "#81b6e3"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#EC8C32"
+footer-col: "#81b6e3"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
